--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
@@ -24,7 +24,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp">
+        android:layout_height="550dp">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginTop="85dp"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="450dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="5dp"
                 app:cardPreventCornerOverlap="false">
@@ -58,7 +58,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -87,7 +88,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="抵扣成功"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                android:textColor="@color/colorBlack"
+                />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -97,7 +100,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$"
+                android:text="￥"
                 android:textSize="32sp"
                 android:textColor="#9A8616"/>
 
@@ -116,9 +119,10 @@
                 android:layout_gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/textView_original_price_tag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="$"
+                    android:text="￥"
                     android:textSize="18sp"
                     android:textColor="#858585"/>
 
