--- a/APP/IOS/PointExchange/PointExchange/SignUpView.xib
+++ b/APP/IOS/PointExchange/PointExchange/SignUpView.xib
@@ -31,13 +31,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="522"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="您输入的手机号不正确" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1a-e4-ZCB">
-                    <rect key="frame" x="132" y="245" width="110" height="32"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="11"/>
-                    <color key="textColor" red="0.88895939086294418" green="0.2758007234902688" blue="0.15531179018965896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9KW-PY-M4E">
                     <rect key="frame" x="70" y="29" width="235" height="372"/>
                     <subviews>
@@ -72,6 +65,12 @@
                                 <action selector="checkInputValid:" destination="-1" eventType="editingDidEnd" id="UZt-1Z-oTF"/>
                             </connections>
                         </textField>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您输入的手机号不正确" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1a-e4-ZCB">
+                            <rect key="frame" x="62.5" y="163.5" width="110" height="0.0"/>
+                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="11"/>
+                            <color key="textColor" red="0.88895939086294418" green="0.2758007234902688" blue="0.15531179018965896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36g-AV-biM">
                             <rect key="frame" x="86.5" y="167.5" width="62" height="61.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
