--- a/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
+++ b/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
@@ -36,7 +36,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="138"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
-                                <view tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IU0-Tf-EaI">
+                                <view userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IU0-Tf-EaI">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="138"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="0.17537992296986302" colorSpace="calibratedRGB"/>
@@ -65,7 +65,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="138"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
-                                <view tag="1" contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zgW-Qp-IWM">
+                                <view userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zgW-Qp-IWM">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="138"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="0.17880458050410958" colorSpace="calibratedRGB"/>
@@ -94,7 +94,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="138"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
-                                <view tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1JP-Q2-GXO">
+                                <view userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1JP-Q2-GXO">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="138"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="0.26666666666666666" green="0.26666666666666666" blue="0.26666666666666666" alpha="0.18303189212328766" colorSpace="calibratedRGB"/>
