--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
@@ -1,134 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    android:orientation="vertical"
+
     >
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <!--背景图-->
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/img_portrait"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/navi_background" />
-        </RelativeLayout>
-
-        <!--头像-->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_centerHorizontal="true"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="我的"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorBlack"
-                    />
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/portrait_1" />
-                <RelativeLayout
-                    android:id="@+id/linearlayout_account_info_account"
-                    android:layout_width="wrap_content"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:gravity="center">
-
-                    <Button
-                        android:id="@+id/button_login"
-                        android:layout_width="250dp"
-                        android:layout_height="50dp"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/login_button"
-                        android:visibility="invisible" />
-                    <TextView
-                        android:id="@+id/textview_account"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true"
-                        android:textAlignment="center"
-                        android:text="yiner"
-                        android:textSize="32sp"
-                        android:textColor="@color/colorBlack"/>
-
-                    <TextView
-                        android:id="@+id/textview_account_position"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentStart="true"
-                        android:text="Guangzhou, China"
-                        android:textAlignment="center"
-                        android:textColor="#808080"
-                        android:textSize="20sp" />
-
-                </RelativeLayout>
-            </LinearLayout>
-
-
-        </RelativeLayout>
-    </RelativeLayout>
-
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
-        <android.support.v7.widget.CardView
+        android:layout_height="wrap_content"
+        android:background="@color/colorBackground"
+        android:orientation="vertical">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
-            <ListView
-                android:id="@+id/listView_menu_account"
+            android:layout_height="wrap_content">
+            <!--背景图-->
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/img_portrait"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/navi_background" />
+            </RelativeLayout>
+
+            <!--头像-->
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:divider="@drawable/list_divider_bg"
-                android:dividerHeight="1dp"
-                >
-            </ListView>
-        </android.support.v7.widget.CardView>
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="我的"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        app:srcCompat="@drawable/portrait_1" />
+
+                    <RelativeLayout
+                        android:id="@+id/linearlayout_account_info_account"
+                        android:layout_width="wrap_content"
+                        android:layout_height="70dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <Button
+                            android:id="@+id/button_login"
+                            android:layout_width="250dp"
+                            android:layout_height="50dp"
+                            android:layout_centerInParent="true"
+                            android:background="@drawable/login_button"
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/textview_account"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:text="yiner"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="32sp" />
+
+                        <TextView
+                            android:id="@+id/textview_account_position"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentStart="true"
+                            android:text="Guangzhou, China"
+                            android:textAlignment="center"
+                            android:textColor="#808080"
+                            android:textSize="20sp" />
+
+                    </RelativeLayout>
+                </LinearLayout>
 
 
+            </RelativeLayout>
+        </RelativeLayout>
 
-        <Button
-            android:id="@+id/button_logout_account"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/pic_logout"
-            android:textColor="@color/colorWhite"/>
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
+
+                <ListView
+                    android:id="@+id/listView_menu_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp"
+                    android:divider="@drawable/list_divider_bg"
+                    android:dividerHeight="1dp"/>
+            </android.support.v7.widget.CardView>
+
+
+            <Button
+                android:id="@+id/button_logout_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/pic_logout"
+                android:textColor="@color/colorWhite" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
 
 
-</LinearLayout>
+
+</ScrollView>
