完成了消费倾向问卷的设计实现，待接入接口

--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
@@ -51,7 +51,7 @@
                         android:id="@+id/textView_description_detail_find_pay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="描述描述描述描述描述描述描述描述描述描述"
+                        android:text="描述"
                         android:maxLines="2"
                         android:textColor="#858585"
                         android:textSize="18sp"
@@ -144,7 +144,7 @@
                         android:id="@+id/textView_time_detail_find_pay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="有效期截至 2018-10-10"
+                        android:text="有效期截至 0000-00-00"
                         android:maxLines="2"
                         android:textColor="#858585"
                         android:textSize="16sp"
