--- a/APP/IOS/PointExchange/PointExchange/Discover.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Discover.storyboard
@@ -20,7 +20,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MxV-jO-O3v">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MxV-jO-O3v">
                                 <rect key="frame" x="0.0" y="324" width="375" height="323"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -34,29 +34,32 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="CzU-Vx-gXy">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推荐优惠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pjn-np-K5R">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="推荐优惠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pjn-np-K5R">
                                 <rect key="frame" x="16" y="124" width="70" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.29411764709999999" green="0.29411764709999999" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hls-mE-JXI" customClass="DiscoverCouponView" customModule="PointExchange" customModuleProvider="target">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hls-mE-JXI" customClass="DiscoverCouponView" customModule="PointExchange" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="149" width="375" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="1qp-ML-mMy"/>
                                 </constraints>
                             </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推荐商家" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J2Z-2C-4fB">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="推荐商家" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J2Z-2C-4fB">
                                 <rect key="frame" x="16" y="303" width="70" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.29411764705882354" green="0.29411764705882354" blue="0.29411764705882354" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <searchBar contentMode="redraw" fixedFrame="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="6Zf-Ta-jCC">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="NYH-Av-hHB" id="9rm-d5-ZMO"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -68,13 +71,9 @@
                             <constraint firstItem="pjn-np-K5R" firstAttribute="leading" secondItem="aDG-2P-Ln0" secondAttribute="leadingMargin" id="AyP-Mo-qWK"/>
                             <constraint firstItem="hls-mE-JXI" firstAttribute="top" secondItem="pjn-np-K5R" secondAttribute="bottom" constant="4" id="F5J-a5-o1u"/>
                             <constraint firstItem="hls-mE-JXI" firstAttribute="leading" secondItem="MxV-jO-O3v" secondAttribute="leading" id="Ofy-Aq-4xX"/>
-                            <constraint firstItem="pjn-np-K5R" firstAttribute="top" secondItem="CzU-Vx-gXy" secondAttribute="bottom" constant="4" id="RI0-h6-9LT"/>
-                            <constraint firstItem="CzU-Vx-gXy" firstAttribute="top" secondItem="1vg-n1-HwL" secondAttribute="top" id="ZwS-Yb-Fxq"/>
-                            <constraint firstItem="CzU-Vx-gXy" firstAttribute="leading" secondItem="hls-mE-JXI" secondAttribute="leading" id="bPG-yx-tzc"/>
                             <constraint firstItem="hls-mE-JXI" firstAttribute="leading" secondItem="1vg-n1-HwL" secondAttribute="leading" id="c8p-Lx-2cp"/>
                             <constraint firstItem="hls-mE-JXI" firstAttribute="trailing" secondItem="MxV-jO-O3v" secondAttribute="trailing" id="fLi-g5-135"/>
                             <constraint firstAttribute="bottom" secondItem="MxV-jO-O3v" secondAttribute="bottom" constant="20" symbolic="YES" id="hRc-Xu-cJa"/>
-                            <constraint firstItem="CzU-Vx-gXy" firstAttribute="trailing" secondItem="hls-mE-JXI" secondAttribute="trailing" id="isb-3g-Icb"/>
                             <constraint firstItem="1vg-n1-HwL" firstAttribute="trailing" secondItem="hls-mE-JXI" secondAttribute="trailing" id="kMW-7N-jhn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1vg-n1-HwL"/>
@@ -83,11 +82,21 @@
                     <navigationItem key="navigationItem" title="发现" id="clD-fC-Sfo"/>
                     <connections>
                         <outlet property="couponView" destination="hls-mE-JXI" id="xue-MA-1cf"/>
-                        <outlet property="searchBar" destination="CzU-Vx-gXy" id="Gh6-hX-ml7"/>
+                        <outlet property="searchBar" destination="6Zf-Ta-jCC" id="COE-hs-YhI"/>
+                        <outlet property="searchDisplayController" destination="3O2-sI-y3R" id="uLi-HM-gDs"/>
                         <outlet property="tableView" destination="MxV-jO-O3v" id="xME-i0-TsQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sd6-To-mkh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="3O2-sI-y3R">
+                    <connections>
+                        <outlet property="delegate" destination="NYH-Av-hHB" id="LjO-A7-E0v"/>
+                        <outlet property="searchBar" destination="6Zf-Ta-jCC" id="bgc-3h-uKA"/>
+                        <outlet property="searchContentsController" destination="NYH-Av-hHB" id="Ez2-Th-6GM"/>
+                        <outlet property="searchResultsDataSource" destination="NYH-Av-hHB" id="hex-Sq-6go"/>
+                        <outlet property="searchResultsDelegate" destination="NYH-Av-hHB" id="cu8-4R-uV7"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1973.5999999999999" y="-437.63118440779613"/>
         </scene>
